--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store-devtools": "^13.0.2",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "ng2-currency-mask": "^13.0.3",
     "ngx-spinner": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
